complete salaries exercise

--- a/01-SF Salaries Exercise.ipynb
+++ b/01-SF Salaries Exercise.ipynb
@@ -900,9 +900,7 @@
     }
    ],
    "source": [
-    "df[df['TotalPayBenefits']==df['TotalPayBenefits'].min()]\n",
-    "# df.loc[df['TotalPayBenefits'].idxmax()]\n",
-    "# df.iloc[df['TotalPayBenefits'].argmax()]"
+    "df[df['TotalPayBenefits']==df['TotalPayBenefits'].min()]"
    ]
   },
   {
@@ -986,27 +984,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Year\n",
-       "2011    63595.956517\n",
-       "2012    65436.406857\n",
-       "2013    69630.030216\n",
-       "2014    66564.421924\n",
-       "Name: BasePay, dtype: float64"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x0000026960E6D450>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby('Year').mean(numeric_only=True)['BasePay']"
+    "df.groupby('Year').meann()"
    ]
   },
   {
@@ -1046,26 +1039,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2159"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['JobTitle'].nunique()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "metadata": {
     "collapsed": false,
@@ -1092,32 +1065,6 @@
    "metadata": {},
    "source": [
     "** What are the top 5 most common jobs? **"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "JobTitle\n",
-       "Transit Operator                7036\n",
-       "Special Nurse                   4389\n",
-       "Registered Nurse                3736\n",
-       "Public Svc Aide-Public Works    2518\n",
-       "Police Officer 3                2421\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['JobTitle'].value_counts().head(5)"
    ]
   },
   {
@@ -1157,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1171,14 +1118,12 @@
        "202"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "sum(df[df['Year']==2013]['JobTitle'].value_counts() == 1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1189,37 +1134,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def WordChief(sen):\n",
-    "    if 'chief' in sen.lower().split():\n",
-    "        return True\n",
-    "    else:\n",
-    "        return False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "477"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
     }
-   ],
-   "source": [
-    "sum(df['JobTitle'].apply(WordChief))\n",
-    "# sum(df['JobTitle'].apply(lambda x: WordChief(x)))"
-   ]
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1253,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -1261,69 +1184,7 @@
     }
    },
    "outputs": [],
-   "source": [
-    "df['title_len']=df['JobTitle'].apply(len)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title_len</th>\n",
-       "      <th>TotalPayBenefits</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>title_len</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.036878</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TotalPayBenefits</th>\n",
-       "      <td>-0.036878</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  title_len  TotalPayBenefits\n",
-       "title_len          1.000000         -0.036878\n",
-       "TotalPayBenefits  -0.036878          1.000000"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[['title_len','TotalPayBenefits']].corr(numeric_only=True)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
